# ts-stock-forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/sample/: 600028.csv
notebooks/: ARIMA_SARIMA_forecasting.ipynb  Simple_models_forecasting.ipynb  XGBoost_forecasting.ipynb
outputs/600028_forecast/: forecast_prices.csv  forecast_returns.csv  forecast_summary.txt
outputs/600028_run/: metrics.csv  run_meta.json
scripts/: predict.py  run_arima_single.py  run_baselines_single.py  run_xgb_single.py  train.py
src/ts_stock_forecast/: __init__.py  features.py  io.py  metrics.py  plotting.py  split.py
src/xgb_forecast/: __init__.py  config.py  data.py  evaluate.py  features.py  model.py  plot.py
